--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.sql.init.mode=embedded
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.kafka.bootstrap-servers=localhost:9092
