--- a/common-config.yaml
+++ b/common-config.yaml
@@ -26,3 +26,5 @@ services:
       service: microservice-base-config
     environment:
       SPRING_PROFILES_ACTIVE: dev
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
