--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.application.name=order-service
 
 spring.datasource.url=jdbc:mysql://localhost:3307/orderdb
-spring.datasource.username=postgres
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+
+# spring.jpa.hibernate.ddl-auto=update
+
+spring.sql.init.mode=always
 
 spring.kafka.bootstrap-servers=localhost:9092
