--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,45 +1,47 @@
 
 version: '1.0'
 
-networks:
-  demo-datn:
-    driver: bridge
-
 services:
   zookeeper:
-    image: 'bitnami/zookeeper:latest'
-    restart: always
-    networks: 
-      - demo-datn
-    container_name: zookeeper
-    environment:
-      - ZOO_ENABLE_AUTH=yes
-      - ALLOW_ANONYMOUS_LOGIN=yes
-      - ZOO_USER
-
+    image: wurstmeister/zookeeper:latest
+    ports:
+      - "2181:2181"
+    extends:
+      file: common-config.yaml
+      service: network-deploy-service
+      
   kafka:
-    image: 'bitnami/kafka:latest'
-    container_name: kafka
-    networks:
-      - demo-datn
+    image: wurstmeister/kafka:latest
+    ports:
+      - "9092:9092"
+    expose:
+      - "9093"
+    depends_on:
+      - zookeeper
     environment:
-      - KAFKA_CFG_NODE_ID=0
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CREATE_TOPICS: "my-topic:1:1"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    extends:
+      file: common-config.yaml
+      service: network-deploy-service
   orderdb:
     container_name: orderdb
     ports:
       - 3307:3306
     environment:
       MYSQL_DATABASE: orderdb
-      MYSQL_USER: orderdb
-      MYSQL_PASSWORD: orderdb
+      # MYSQL_USER: orderdb
+      # MYSQL_PASSWORD: orderdb
     extends:
       file: common-config.yaml
       service: microservice-db-config
+
   order_service:
     image: 'yfangvjoker/order-service:s1'
     container_name: order_service
@@ -48,6 +50,8 @@ services:
     depends_on:
       orderdb:
         condition: service_healthy
+      kafka:
+        condition: service_started
     healthcheck:
       test: "curl --fail --silent localhost:9000/actuator/health/readiness | grep UP || exit 1"
       interval: 10s
@@ -57,6 +61,7 @@ services:
     environment:
       SPRING_APPLICATION_NAME: "order"
       SPRING_DATASOURCE_URL: "jdbc:mysql://orderdb:3306/orderdb"
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9093
     extends:
       file: common-config.yaml
       service: microservice-detail-config
@@ -76,3 +81,7 @@ services:
   #   extends:
   #     file: common-config.yaml
   #     service: microservice-detail-config
+
+networks:
+  demo-datn:
+    driver: bridge
