--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -96,6 +96,13 @@
 					</to>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.baeldung.spring.kafka.KafkaApplication</mainClass>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
