--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -10,4 +10,7 @@ spring.jpa.show-sql=true
 
 spring.sql.init.mode=always
 
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=kafka:9093
+spring.kafka.template.default-topic=order
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.auto-offset-reset=earliest
