--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,13 @@
 sonar.projectKey=TranYVan_datn-demo-microservice_670f5479-2750-4bea-9883-fc91d1ea3d6f
+
+# Source directories
+sonar.sources=order-service/src,product_service/src
+
+# Java settings
+sonar.java.binaries=order-service/target/classes
+
+# Python settings (optional exclusions if needed)
+sonar.exclusions=**/__pycache__/**,**/*.pyc
+
+# Additional settings
+sonar.language=java,py
