--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=TranYVan_datn-demo-microservice_670f5479-2750-4bea-9883-fc91d1ea3d6f
+sonar.host.url=http://localhost:9000
 
 # Source directories
 sonar.sources=order-service/src,product_service/src
